Fix icon link wrapping overflow

--- a/public/styles/super-inline.css
+++ b/public/styles/super-inline.css
@@ -59,7 +59,6 @@ span[data-link-style="icon"] > a.notion-link.link,
 a[data-link-style="icon"].notion-link.link {
   --link-icon-size: 24px;
   --link-icon-space: 25px;
-  white-space: nowrap;
 }
 
 span[data-link-style="icon"] > a.notion-link.link:before,
